# lab-to

./: .gitignore  README.md  init-project.sh
init/: CMakeLists.txt  Makefile  README.md  main.cpp
lab01/: CMakeLists.txt  Calculadora.cpp  Makefile  main.cpp
lab01/include/: calculator-core.h  calculator-history.h  calculator-parser.h  calculator.h  processor.h
lab01/include/operations/: divide.h  multiplicate.h  substract.h  sum.h
lab01/src/: calculator-core.cpp  calculator-history.cpp  calculator-parser.cpp  calculator.cpp  main.cpp  processor.cpp
lab01/src/operations/: divide.cpp  multiplicate.cpp  operation.cpp  substract.cpp  sum.cpp
lab01/tests/src/: calculator-core.spec.cpp  calculator.cpp  calculator.spec.cpp  processor.spec.cpp
lab01/tests/src/operations/: divide.spec.cpp  multiplicate.spec.cpp  substract.spec.cpp
lab02/: CMakeLists.txt  README.md  main.cpp  operaciones.txt  resultados.txt  smart_pointer_demo.cpp
lab02/include/: calculator-core.h  calculator.h
lab02/include/lib/: bet-node.h  bet.h
lab02/include/operations/: multiplicate.h  operation.h  sum.h
lab02/src/: calculator-core.cpp  calculator.cpp
lab02/src/lib/: bet-node.cpp  bet.cpp
lab02/src/operations/: multiplicate.cpp  sum.cpp
lab02/tests/src/: calculator-core.spec.cpp  calculator-parser.spec.cpp  calculator.spec.cpp
lab02/tests/src/lib/: bet.spec.cpp
lab02/tests/src/operations/: divide.spec.cpp  multiplicate.spec.cpp  substract.spec.cpp  sum.spec.cpp
lab03/: CMakeLists.txt  Makefile  README.md  main.cpp  school_data.txt
lab03/include/: Assignment.h  Course.h  Grade.h  Person.h  School.h  Student.h  Teacher.h  mock.h
lab03/src/: Assignment.cpp  Course.cpp  Grade.cpp  Person.cpp  School.cpp  Student.cpp  Teacher.cpp  mock.cpp
lab06/: CMakeLists.txt  adulto.cpp  adulto.h  comunicacion.cpp  comunicacion.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp  task.h  task.ui
lab07/: CMakeLists.txt  country.cpp  country.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp  task.h  task.ui
lab08/: CMakeLists.txt  Makefile  README.md  main.cpp
lab08/include/: aritmetica.h  comun.h  contendor.h  contenedor.h  list.h  mayor.h  pila.h
lab08/src/: mayor.cpp
